--- a/app/src/main/res/layout/recicler_view_item.xml
+++ b/app/src/main/res/layout/recicler_view_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/img_poster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:layout_constraintEnd_toStartOf="@+id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
